--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "dorp-rogue"
+name = "rogue"
 version = "0.1.0"
 authors = ["Kiley Owen <owenk@wit.edu>"]
 
 [dependencies.dorp]
-path = "src/dorp/"
+path = "../lib/"
 version = "0.1.0"
